# redbot-media-player-homeassistant

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: quality.yml
.kg/: aliases.yaml  competency-questions.md  edges.jsonl  nodes.jsonl  schema.yaml  validate.py
.kg/queries/: cq-results.md  query.py
custom_components/redbot_media_player/: CHANGELOG.md  README.md  __init__.py  audiodb.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  diagnostics.py  helpers.py  manifest.json  media_player.py  playlist_coordinator.py  rpc.py  sensor.py  services.yaml  strings.json
custom_components/redbot_media_player/translations/: en.json
docs/: lovelace-ui-cards.yaml
tests/: conftest.py  test_audiodb.py  test_config_flow.py  test_coordinator.py  test_diagnostic_entities.py  test_diagnostics.py  test_helpers.py  test_init.py  test_media_player.py  test_platform_metadata.py  test_playlist_entities.py  test_rpc.py
