[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["custom_components*"]
namespaces = true

[project]
name = "redbot-media-player-homeassistant"
version = "0.0.0"
description = "RedBot Media Player custom integration tests"
requires-python = ">=3.12"
readme = "README.md"

[project.optional-dependencies]
test = [
  "homeassistant>=2024.12.0",
  "pytest>=8.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "pytest-homeassistant-custom-component>=0.13.0",
  "pytest-socket>=0.7.0",
  "aiohttp>=3.9.0",
  "mypy>=1.11.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.coverage.run]
source = ["custom_components/redbot_media_player"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
]
fail_under = 90

[tool.mypy]
python_version = "3.12"
strict = false
check_untyped_defs = false
disallow_untyped_defs = false
no_implicit_optional = true
warn_return_any = false
warn_unused_ignores = true
ignore_missing_imports = true
disable_error_code = ["override", "return-value", "no-untyped-def", "assignment", "union-attr", "misc", "no-any-return"]
exclude = "^tests/"
